{
    "name": "Controls",
    "maps": [
        {
            "name": "MapEditor",
            "id": "9831e407-f7dc-4402-b3b0-45ba0bd2450f",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "2a99c43a-55f9-47de-a571-72f613ac62bf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftMouseButton",
                    "type": "Button",
                    "id": "70fd059a-e5b7-47e3-9631-8b8518403afd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftMouseButtonHold",
                    "type": "Button",
                    "id": "79e18c97-241f-468e-876f-678a883ccab0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold"
                },
                {
                    "name": "RightMouseButton",
                    "type": "Button",
                    "id": "dad97b56-d24e-4775-a7ce-69b4b0dbcd4a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MiddleMouseButton",
                    "type": "Button",
                    "id": "f5405914-536e-424d-97a6-5d02ad57dd89",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "736876a8-1e19-4314-a0df-f2edb7f61b70",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "79ffc3d9-2438-4975-ae29-d63af562827e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMouseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "66db4bfe-dcf1-4d34-b03c-c22171c869cc",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMouseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5e5fbff-2950-4d0c-96fe-3fdd684e67b5",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MiddleMouseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b5c8f5e3-f1b0-4b48-a74b-01f9ed172662",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMouseButtonHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}